grammar/ingreedy.peg
start
  = ingredient_addition

ingredient_addition
  = ingredient:ingredient? colon amount:amount? (ws+)? container:container? unit:unit? (ws+)? [\n]?  {
    var result = {
      amount: amount,
      container: container,
      ingredient: ingredient,
      unit: unit
    };

    for(var i in result) {
      if(result[i] === null || result[i] === undefined) {
        delete result[i];
      }
    }

    return result;
  }
  / amount:amount? (ws+)? container:container? unit:unit? (ws+)? ingredient:ingredient? [\n]?  {
    var result = {
      amount: amount,
      container: container,
      ingredient: ingredient,
      unit: unit
    };

    for(var i in result) {
      if(result[i] === null || result[i] === undefined) {
        delete result[i];
      }
    }

    return result;
  }

amount
  = float
  / mixed_number
  / fraction
  / integer

container
  = "("? amount:amount (ws+)? unit:unit")"? {
    return { amount: amount, unit: unit };
  }

ws
  = " "
  / [\t]

colon
  = ": "

space
  = " "

ingredient
  = phrase

phrase
  = $(word (space (word)*)*)

word
  = letters:char+ { return letters.join(''); }

float
  = $(integer? [.] integer)

mixed_number
  = $(integer space fraction)
  / $(integer space "and" space fraction)

fraction
  = $(integer [/] integer)

integer
  = digits:[0-9]+ { return digits.join(''); }

parenthetical
  = "(" ws* integer:integer ws* ")" {
    return integer;
  }

letter
  = [a-zA-Z]

char
  = [a-zA-Z0-9\xC4\xE4\xDC\xFC\xD6\xDF\xF6'",.;\(\)\-_%\&\*\$\+\=]

unit
  = $(english_unit !letter)
  / $(german_unit !letter)
  / $(metric_unit !letter)
  / $(imprecise_unit !letter)

english_unit
  = cup
  / fluid_ounce
  / gallon
  / ounce
  / pint
  / pound
  / quart
  / tablespoon
  / teaspoon

german_unit
  = Tasse
  / Esslöffel
  / Teelöffel
  / Pfund
  / Messerspitze
  / Prise
  / Spritzer
  / Schuss
  / Tropfen
  / Bund

cup
  = 'cups'i
  / 'cup'i
  / 'c.'i
  / 'c'i

Tasse
  = 'tassen'i
  / 'tasse'i
  / 'tas.'i
  / 't.'i

fluid_ounce
  = fluid ws ounce

fluid
  = 'fluid'i
  / 'fl'i '.'?

gallon
  = 'gallons'i
  / 'gallon'i
  / 'gal.'i
  / 'gal'i

ounce
  = 'ounces'i
  / 'ounce'i
  / 'oz.'i
  / 'oz'i

pint
  = 'pints'i
  / 'pint'i
  / 'pt.'i
  / 'pt'i

pound
  = 'pounds'i
  / 'pound'i
  / 'lbs.'i
  / 'lbs'i
  / 'lb.'i
  / 'lb'i

Pfund
  = 'pfunde'i
  / 'pfund'i

quart
  = 'quarts'i
  / 'quart'i
  / 'qts.'i
  / 'qts'i
  / 'qt.'i
  / 'qt'i

tablespoon
  = 'tablespoons'i
  / 'tablespoon'i
  / 'tbsp.'i
  / 'tbsp'i
  / 'tbs.'i
  / 'tbs'i
  / 'T.'
  / 'T'

Esslöffel
  = 'gehäufter esslöffel'i
  / 'gehäufter eßlöffel'i
  / 'gehäufte esslöffel'i
  / 'gehäufte eßlöffel'i
  / 'gehäufter el'i
  / 'gehäufte el'i      
  / 'gestrichener esslöffel'i
  / 'gestrichener eßlöffel'i  
  / 'gestrichene esslöffel'i
  / 'gestrichene eßlöffel'i  
  / 'gestr. esslöffel'i
  / 'gestr. eßlöffel'i  
  / 'gestr. el'i
  / 'gestr el'i
  / 'esslöffel'i
  / 'eßlöffel'i
  / 'esslfl.'i
  / 'esslfl'i
  / 'el'i

teaspoon
  = 'teaspoons'i
  / 'teaspoon'i
  / 'tsp.'i
  / 'tsp'i
  / 't.'
  / 't'

Teelöffel
  = 'gehäufter teelöffel'i
  / 'gehäufte teelöffel'i
  / 'gehäufte tl'i  
  / 'gehäufter tl'i    
  / 'gestrichener teelöffel'i
  / 'gestrichener tl'i  
  / 'gestrichene teelöffel'i
  / 'gestrichene tl'i  
  / 'gestr. teelöffel'i
  / 'gestr. tl'i
  / 'teelöffel'i
  / 'teelfl.'i
  / 'teelfl'i
  / 'tl'i

Messerspitze
  = 'messerspitzen'i
  / 'messerspitze'i  
  / 'msp.'i
  / 'msp'i

Prise
  = 'prisen'i
  / 'prise'i
  / 'pr.'i
  / 'pr'i

Schuss
  = 'schüsse'i
  / 'schuss'i

Spritzer
  = 'spritzer'i

Tropfen
  = 'tropfen'i

Bund
  = 'bünde'i
  / 'bunde'i
  / 'bund'i

metric_unit
  = gram
  / kilogram
  / liter
  / milligram
  / milliliter

gram
  = 'grams'i
  / 'gram'i
  / 'gr.'i
  / 'gr'i
  / 'g.'i
  / 'g'i

kilogram
  = 'kilograms'i
  / 'kilogram'i
  / 'kg.'i
  / 'kg'i

liter
  = 'liters'i
  / 'liter'i
  / 'l.'i
  / 'l'i

milligram
  = 'milligrams'i
  / 'milligram'i
  / 'mg.'i
  / 'mg'i

milliliter
  = 'milliliters'i
  / 'milliliter'i
  / 'ml.'i
  / 'ml'i

imprecise_unit
  = dash
  / handful
  / pinch
  / touch
  / etwas

dash
  = 'dashes'i
  / 'dash'i

handful
  = 'handfuls'i
  / 'handful'i

pinch
  = 'pinches'i
  / 'pinch'i

touch
  = 'touches'i
  / 'touch'i

etwas
  = 'etwas'i
