src/parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = /^[\n]/,
        peg$c1 = { type: "class", value: "[\\n]", description: "[\\n]" },
        peg$c2 = function(amount, container, unit, ingredient) {
            var result = {
              amount: amount,
              container: container,
              ingredient: ingredient,
              unit: unit
            };

            for(var i in result) {
              if(result[i] === null || result[i] === undefined) {
                delete result[i];
              }
            }

            return result;
          },
        peg$c3 = "(",
        peg$c4 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c5 = ")",
        peg$c6 = { type: "literal", value: ")", description: "\")\"" },
        peg$c7 = function(amount, unit) {
            return { amount: amount, unit: unit };
          },
        peg$c8 = " ",
        peg$c9 = { type: "literal", value: " ", description: "\" \"" },
        peg$c10 = /^[\t]/,
        peg$c11 = { type: "class", value: "[\\t]", description: "[\\t]" },
        peg$c12 = function(letters) { return letters.join(''); },
        peg$c13 = /^[.]/,
        peg$c14 = { type: "class", value: "[.]", description: "[.]" },
        peg$c15 = /^[\/]/,
        peg$c16 = { type: "class", value: "[/]", description: "[/]" },
        peg$c17 = /^[0-9]/,
        peg$c18 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c19 = function(digits) { return digits.join(''); },
        peg$c20 = function(integer) {
            return integer;
          },
        peg$c21 = /^[a-zA-Z]/,
        peg$c22 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c23 = /^[a-zA-Z0-9\xC4\xE4\xDC\xFC\xD6\xDF\xF6'",:()\-_%&*$+=]/,
        peg$c24 = { type: "class", value: "[a-zA-Z0-9\\xC4\\xE4\\xDC\\xFC\\xD6\\xDF\\xF6'\",:\\(\\)\\-_%\\&\\*\\$\\+\\=]", description: "[a-zA-Z0-9\\xC4\\xE4\\xDC\\xFC\\xD6\\xDF\\xF6'\",:\\(\\)\\-_%\\&\\*\\$\\+\\=]" },
        peg$c25 = "cups",
        peg$c26 = { type: "literal", value: "cups", description: "\"cups\"" },
        peg$c27 = "cup",
        peg$c28 = { type: "literal", value: "cup", description: "\"cup\"" },
        peg$c29 = "c.",
        peg$c30 = { type: "literal", value: "c.", description: "\"c.\"" },
        peg$c31 = "c",
        peg$c32 = { type: "literal", value: "c", description: "\"c\"" },
        peg$c33 = "tassen",
        peg$c34 = { type: "literal", value: "tassen", description: "\"tassen\"" },
        peg$c35 = "tasse",
        peg$c36 = { type: "literal", value: "tasse", description: "\"tasse\"" },
        peg$c37 = "tas.",
        peg$c38 = { type: "literal", value: "tas.", description: "\"tas.\"" },
        peg$c39 = "t.",
        peg$c40 = { type: "literal", value: "t.", description: "\"t.\"" },
        peg$c41 = "fluid",
        peg$c42 = { type: "literal", value: "fluid", description: "\"fluid\"" },
        peg$c43 = "fl",
        peg$c44 = { type: "literal", value: "fl", description: "\"fl\"" },
        peg$c45 = ".",
        peg$c46 = { type: "literal", value: ".", description: "\".\"" },
        peg$c47 = "gallons",
        peg$c48 = { type: "literal", value: "gallons", description: "\"gallons\"" },
        peg$c49 = "gallon",
        peg$c50 = { type: "literal", value: "gallon", description: "\"gallon\"" },
        peg$c51 = "gal.",
        peg$c52 = { type: "literal", value: "gal.", description: "\"gal.\"" },
        peg$c53 = "gal",
        peg$c54 = { type: "literal", value: "gal", description: "\"gal\"" },
        peg$c55 = "ounces",
        peg$c56 = { type: "literal", value: "ounces", description: "\"ounces\"" },
        peg$c57 = "ounce",
        peg$c58 = { type: "literal", value: "ounce", description: "\"ounce\"" },
        peg$c59 = "oz.",
        peg$c60 = { type: "literal", value: "oz.", description: "\"oz.\"" },
        peg$c61 = "oz",
        peg$c62 = { type: "literal", value: "oz", description: "\"oz\"" },
        peg$c63 = "pints",
        peg$c64 = { type: "literal", value: "pints", description: "\"pints\"" },
        peg$c65 = "pint",
        peg$c66 = { type: "literal", value: "pint", description: "\"pint\"" },
        peg$c67 = "pt.",
        peg$c68 = { type: "literal", value: "pt.", description: "\"pt.\"" },
        peg$c69 = "pt",
        peg$c70 = { type: "literal", value: "pt", description: "\"pt\"" },
        peg$c71 = "pounds",
        peg$c72 = { type: "literal", value: "pounds", description: "\"pounds\"" },
        peg$c73 = "pound",
        peg$c74 = { type: "literal", value: "pound", description: "\"pound\"" },
        peg$c75 = "lbs.",
        peg$c76 = { type: "literal", value: "lbs.", description: "\"lbs.\"" },
        peg$c77 = "lbs",
        peg$c78 = { type: "literal", value: "lbs", description: "\"lbs\"" },
        peg$c79 = "lb.",
        peg$c80 = { type: "literal", value: "lb.", description: "\"lb.\"" },
        peg$c81 = "lb",
        peg$c82 = { type: "literal", value: "lb", description: "\"lb\"" },
        peg$c83 = "pfunde",
        peg$c84 = { type: "literal", value: "pfunde", description: "\"pfunde\"" },
        peg$c85 = "pfund",
        peg$c86 = { type: "literal", value: "pfund", description: "\"pfund\"" },
        peg$c87 = "quarts",
        peg$c88 = { type: "literal", value: "quarts", description: "\"quarts\"" },
        peg$c89 = "quart",
        peg$c90 = { type: "literal", value: "quart", description: "\"quart\"" },
        peg$c91 = "qts.",
        peg$c92 = { type: "literal", value: "qts.", description: "\"qts.\"" },
        peg$c93 = "qts",
        peg$c94 = { type: "literal", value: "qts", description: "\"qts\"" },
        peg$c95 = "qt.",
        peg$c96 = { type: "literal", value: "qt.", description: "\"qt.\"" },
        peg$c97 = "qt",
        peg$c98 = { type: "literal", value: "qt", description: "\"qt\"" },
        peg$c99 = "tablespoons",
        peg$c100 = { type: "literal", value: "tablespoons", description: "\"tablespoons\"" },
        peg$c101 = "tablespoon",
        peg$c102 = { type: "literal", value: "tablespoon", description: "\"tablespoon\"" },
        peg$c103 = "tbsp.",
        peg$c104 = { type: "literal", value: "tbsp.", description: "\"tbsp.\"" },
        peg$c105 = "tbsp",
        peg$c106 = { type: "literal", value: "tbsp", description: "\"tbsp\"" },
        peg$c107 = "tbs.",
        peg$c108 = { type: "literal", value: "tbs.", description: "\"tbs.\"" },
        peg$c109 = "tbs",
        peg$c110 = { type: "literal", value: "tbs", description: "\"tbs\"" },
        peg$c111 = "T.",
        peg$c112 = { type: "literal", value: "T.", description: "\"T.\"" },
        peg$c113 = "T",
        peg$c114 = { type: "literal", value: "T", description: "\"T\"" },
        peg$c115 = "geh\xE4ufter essl\xF6ffel",
        peg$c116 = { type: "literal", value: "geh\xE4ufter essl\xF6ffel", description: "\"geh\\xE4ufter essl\\xF6ffel\"" },
        peg$c117 = "geh\xE4ufter e\xDFl\xF6ffel",
        peg$c118 = { type: "literal", value: "geh\xE4ufter e\xDFl\xF6ffel", description: "\"geh\\xE4ufter e\\xDFl\\xF6ffel\"" },
        peg$c119 = "geh\xE4ufte essl\xF6ffel",
        peg$c120 = { type: "literal", value: "geh\xE4ufte essl\xF6ffel", description: "\"geh\\xE4ufte essl\\xF6ffel\"" },
        peg$c121 = "geh\xE4ufte e\xDFl\xF6ffel",
        peg$c122 = { type: "literal", value: "geh\xE4ufte e\xDFl\xF6ffel", description: "\"geh\\xE4ufte e\\xDFl\\xF6ffel\"" },
        peg$c123 = "geh\xE4ufter el",
        peg$c124 = { type: "literal", value: "geh\xE4ufter el", description: "\"geh\\xE4ufter el\"" },
        peg$c125 = "geh\xE4ufte el",
        peg$c126 = { type: "literal", value: "geh\xE4ufte el", description: "\"geh\\xE4ufte el\"" },
        peg$c127 = "gestrichener essl\xF6ffel",
        peg$c128 = { type: "literal", value: "gestrichener essl\xF6ffel", description: "\"gestrichener essl\\xF6ffel\"" },
        peg$c129 = "gestrichener e\xDFl\xF6ffel",
        peg$c130 = { type: "literal", value: "gestrichener e\xDFl\xF6ffel", description: "\"gestrichener e\\xDFl\\xF6ffel\"" },
        peg$c131 = "gestrichene essl\xF6ffel",
        peg$c132 = { type: "literal", value: "gestrichene essl\xF6ffel", description: "\"gestrichene essl\\xF6ffel\"" },
        peg$c133 = "gestrichene e\xDFl\xF6ffel",
        peg$c134 = { type: "literal", value: "gestrichene e\xDFl\xF6ffel", description: "\"gestrichene e\\xDFl\\xF6ffel\"" },
        peg$c135 = "gestr. essl\xF6ffel",
        peg$c136 = { type: "literal", value: "gestr. essl\xF6ffel", description: "\"gestr. essl\\xF6ffel\"" },
        peg$c137 = "gestr. e\xDFl\xF6ffel",
        peg$c138 = { type: "literal", value: "gestr. e\xDFl\xF6ffel", description: "\"gestr. e\\xDFl\\xF6ffel\"" },
        peg$c139 = "gestr. el",
        peg$c140 = { type: "literal", value: "gestr. el", description: "\"gestr. el\"" },
        peg$c141 = "gestr el",
        peg$c142 = { type: "literal", value: "gestr el", description: "\"gestr el\"" },
        peg$c143 = "essl\xF6ffel",
        peg$c144 = { type: "literal", value: "essl\xF6ffel", description: "\"essl\\xF6ffel\"" },
        peg$c145 = "e\xDFl\xF6ffel",
        peg$c146 = { type: "literal", value: "e\xDFl\xF6ffel", description: "\"e\\xDFl\\xF6ffel\"" },
        peg$c147 = "esslfl.",
        peg$c148 = { type: "literal", value: "esslfl.", description: "\"esslfl.\"" },
        peg$c149 = "esslfl",
        peg$c150 = { type: "literal", value: "esslfl", description: "\"esslfl\"" },
        peg$c151 = "el",
        peg$c152 = { type: "literal", value: "el", description: "\"el\"" },
        peg$c153 = "teaspoons",
        peg$c154 = { type: "literal", value: "teaspoons", description: "\"teaspoons\"" },
        peg$c155 = "teaspoon",
        peg$c156 = { type: "literal", value: "teaspoon", description: "\"teaspoon\"" },
        peg$c157 = "tsp.",
        peg$c158 = { type: "literal", value: "tsp.", description: "\"tsp.\"" },
        peg$c159 = "tsp",
        peg$c160 = { type: "literal", value: "tsp", description: "\"tsp\"" },
        peg$c161 = "t",
        peg$c162 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c163 = "geh\xE4ufter teel\xF6ffel",
        peg$c164 = { type: "literal", value: "geh\xE4ufter teel\xF6ffel", description: "\"geh\\xE4ufter teel\\xF6ffel\"" },
        peg$c165 = "geh\xE4ufte teel\xF6ffel",
        peg$c166 = { type: "literal", value: "geh\xE4ufte teel\xF6ffel", description: "\"geh\\xE4ufte teel\\xF6ffel\"" },
        peg$c167 = "geh\xE4ufte tl",
        peg$c168 = { type: "literal", value: "geh\xE4ufte tl", description: "\"geh\\xE4ufte tl\"" },
        peg$c169 = "geh\xE4ufter tl",
        peg$c170 = { type: "literal", value: "geh\xE4ufter tl", description: "\"geh\\xE4ufter tl\"" },
        peg$c171 = "gestrichener teel\xF6ffel",
        peg$c172 = { type: "literal", value: "gestrichener teel\xF6ffel", description: "\"gestrichener teel\\xF6ffel\"" },
        peg$c173 = "gestrichener tl",
        peg$c174 = { type: "literal", value: "gestrichener tl", description: "\"gestrichener tl\"" },
        peg$c175 = "gestrichene teel\xF6ffel",
        peg$c176 = { type: "literal", value: "gestrichene teel\xF6ffel", description: "\"gestrichene teel\\xF6ffel\"" },
        peg$c177 = "gestrichene tl",
        peg$c178 = { type: "literal", value: "gestrichene tl", description: "\"gestrichene tl\"" },
        peg$c179 = "gestr. teel\xF6ffel",
        peg$c180 = { type: "literal", value: "gestr. teel\xF6ffel", description: "\"gestr. teel\\xF6ffel\"" },
        peg$c181 = "gestr. tl",
        peg$c182 = { type: "literal", value: "gestr. tl", description: "\"gestr. tl\"" },
        peg$c183 = "teel\xF6ffel",
        peg$c184 = { type: "literal", value: "teel\xF6ffel", description: "\"teel\\xF6ffel\"" },
        peg$c185 = "teelfl.",
        peg$c186 = { type: "literal", value: "teelfl.", description: "\"teelfl.\"" },
        peg$c187 = "teelfl",
        peg$c188 = { type: "literal", value: "teelfl", description: "\"teelfl\"" },
        peg$c189 = "tl",
        peg$c190 = { type: "literal", value: "tl", description: "\"tl\"" },
        peg$c191 = "messerspitzen",
        peg$c192 = { type: "literal", value: "messerspitzen", description: "\"messerspitzen\"" },
        peg$c193 = "messerspitze",
        peg$c194 = { type: "literal", value: "messerspitze", description: "\"messerspitze\"" },
        peg$c195 = "msp.",
        peg$c196 = { type: "literal", value: "msp.", description: "\"msp.\"" },
        peg$c197 = "msp",
        peg$c198 = { type: "literal", value: "msp", description: "\"msp\"" },
        peg$c199 = "prisen",
        peg$c200 = { type: "literal", value: "prisen", description: "\"prisen\"" },
        peg$c201 = "prise",
        peg$c202 = { type: "literal", value: "prise", description: "\"prise\"" },
        peg$c203 = "pr.",
        peg$c204 = { type: "literal", value: "pr.", description: "\"pr.\"" },
        peg$c205 = "pr",
        peg$c206 = { type: "literal", value: "pr", description: "\"pr\"" },
        peg$c207 = "sch\xFCsse",
        peg$c208 = { type: "literal", value: "sch\xFCsse", description: "\"sch\\xFCsse\"" },
        peg$c209 = "schuss",
        peg$c210 = { type: "literal", value: "schuss", description: "\"schuss\"" },
        peg$c211 = "spritzer",
        peg$c212 = { type: "literal", value: "spritzer", description: "\"spritzer\"" },
        peg$c213 = "tropfen",
        peg$c214 = { type: "literal", value: "tropfen", description: "\"tropfen\"" },
        peg$c215 = "grams",
        peg$c216 = { type: "literal", value: "grams", description: "\"grams\"" },
        peg$c217 = "gram",
        peg$c218 = { type: "literal", value: "gram", description: "\"gram\"" },
        peg$c219 = "gr.",
        peg$c220 = { type: "literal", value: "gr.", description: "\"gr.\"" },
        peg$c221 = "gr",
        peg$c222 = { type: "literal", value: "gr", description: "\"gr\"" },
        peg$c223 = "g.",
        peg$c224 = { type: "literal", value: "g.", description: "\"g.\"" },
        peg$c225 = "g",
        peg$c226 = { type: "literal", value: "g", description: "\"g\"" },
        peg$c227 = "kilograms",
        peg$c228 = { type: "literal", value: "kilograms", description: "\"kilograms\"" },
        peg$c229 = "kilogram",
        peg$c230 = { type: "literal", value: "kilogram", description: "\"kilogram\"" },
        peg$c231 = "kg.",
        peg$c232 = { type: "literal", value: "kg.", description: "\"kg.\"" },
        peg$c233 = "kg",
        peg$c234 = { type: "literal", value: "kg", description: "\"kg\"" },
        peg$c235 = "liters",
        peg$c236 = { type: "literal", value: "liters", description: "\"liters\"" },
        peg$c237 = "liter",
        peg$c238 = { type: "literal", value: "liter", description: "\"liter\"" },
        peg$c239 = "l.",
        peg$c240 = { type: "literal", value: "l.", description: "\"l.\"" },
        peg$c241 = "l",
        peg$c242 = { type: "literal", value: "l", description: "\"l\"" },
        peg$c243 = "milligrams",
        peg$c244 = { type: "literal", value: "milligrams", description: "\"milligrams\"" },
        peg$c245 = "milligram",
        peg$c246 = { type: "literal", value: "milligram", description: "\"milligram\"" },
        peg$c247 = "mg.",
        peg$c248 = { type: "literal", value: "mg.", description: "\"mg.\"" },
        peg$c249 = "mg",
        peg$c250 = { type: "literal", value: "mg", description: "\"mg\"" },
        peg$c251 = "milliliters",
        peg$c252 = { type: "literal", value: "milliliters", description: "\"milliliters\"" },
        peg$c253 = "milliliter",
        peg$c254 = { type: "literal", value: "milliliter", description: "\"milliliter\"" },
        peg$c255 = "ml.",
        peg$c256 = { type: "literal", value: "ml.", description: "\"ml.\"" },
        peg$c257 = "ml",
        peg$c258 = { type: "literal", value: "ml", description: "\"ml\"" },
        peg$c259 = "dashes",
        peg$c260 = { type: "literal", value: "dashes", description: "\"dashes\"" },
        peg$c261 = "dash",
        peg$c262 = { type: "literal", value: "dash", description: "\"dash\"" },
        peg$c263 = "handfuls",
        peg$c264 = { type: "literal", value: "handfuls", description: "\"handfuls\"" },
        peg$c265 = "handful",
        peg$c266 = { type: "literal", value: "handful", description: "\"handful\"" },
        peg$c267 = "pinches",
        peg$c268 = { type: "literal", value: "pinches", description: "\"pinches\"" },
        peg$c269 = "pinch",
        peg$c270 = { type: "literal", value: "pinch", description: "\"pinch\"" },
        peg$c271 = "touches",
        peg$c272 = { type: "literal", value: "touches", description: "\"touches\"" },
        peg$c273 = "touch",
        peg$c274 = { type: "literal", value: "touch", description: "\"touch\"" },
        peg$c275 = "etwas",
        peg$c276 = { type: "literal", value: "etwas", description: "\"etwas\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parseingredient_addition();

      return s0;
    }

    function peg$parseingredient_addition() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseamount();
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        if (s3 !== peg$FAILED) {
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsews();
          }
        } else {
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsecontainer();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseunit();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parsews();
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parsews();
                }
              } else {
                s5 = peg$FAILED;
              }
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parsephrase();
                if (s6 === peg$FAILED) {
                  s6 = null;
                }
                if (s6 !== peg$FAILED) {
                  if (peg$c0.test(input.charAt(peg$currPos))) {
                    s7 = input.charAt(peg$currPos);
                    peg$currPos++;
                  } else {
                    s7 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c1); }
                  }
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c2(s1, s3, s4, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseamount() {
      var s0;

      s0 = peg$parsefloat();
      if (s0 === peg$FAILED) {
        s0 = peg$parsemixed_number();
        if (s0 === peg$FAILED) {
          s0 = peg$parsefraction();
          if (s0 === peg$FAILED) {
            s0 = peg$parseinteger();
          }
        }
      }

      return s0;
    }

    function peg$parsecontainer() {
      var s0, s1, s2, s3, s4, s5;
